--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 				<li>bricks</li>
 				<li>mortar</li>
 				<li>sand</li>
-				<li></li>
-				<li></li>
+				<li>avav</li>
+				<li>bgnrn</li>
 			</ul>
 		</div>
 	</body>
